* Add the /forceradar client-side command for observers - trepan
* Minor cleanup of source and build system - Jeff Makey
* Explicitly link to the dl library when needed - Jeff Makey
* Remove unused dependency on Xi library - Jeff Makey
* Clarify copyright assignment terms for developers - Jeff Myers
* Allow only one Enter message per player instance - Jeff Makey


BZFlag 2.0.14  "This isn't the release you are looking for." (2010-02-15)
-------------------------------------------------------------------------

* Add Options -> Display -> AntiFlicker option - trepan
* Add Options -> Input -> Confine Mouse (MotionBox) - trepan
* Adjust advanced ground rendering for texture flicker - trepan
* Change the default stencil bitplanes to 1 to fix stencil shadows and various
  other stencil features - trepan
* Backport fix for /idbanlist and /hostbanlist crashes - trepan
* Add support for gcc-4.4 and libtool-2.2 - Jeff Makey
* Update to Microsoft Visual C++ 9 from 8.0 - Jeff Myers
* Update to directInput 8 from 7 - Jeff Myers
* Fix player ghosting failure - Steven Mertens
* Provide API support for using bz_moveFlag on team flags - Scott Wichser
* Add pushstats plugin for future statistics gathering system - Jeff Myers
* Increase restrictions on incompletely joined players - Jeff Myers, Scott W.
* Announce saved file name in recordmatch plugin - Jeff Makey
* Fix buffer overflow in menu subsystem - Jeff Myers
* Fully support glob-style wildcards in hostbans and make name comparisons
  case insensitive - Bryan Jennings
* Properly limit maximum message size in /showgroup command - Jeff Makey
* Reset team scores in case of a capture during a countdown - Jeff Makey
* Block spoofed /me messages - Scott Wichser
* Keep flags within the world boundary - Jeff Makey
* Add the "roamView" BZDB variable - trepan
* Change fonts to DejaVu - Jeff Myers, Tim Riker
* Source cleanup - Tim Riker


BZFlag 2.0.12  "The release without a name." (2008-06-25)